--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ a:focus {
 	font-weight: 500;
 	letter-spacing: 0.02em;
 	line-height: 24px;
+	padding: 24px 0;
 }
 
 .contact {
@@ -183,6 +184,7 @@ a:focus {
 	margin: 10px;
 	margin: 0 auto;
 	padding: 16px 32px;
+	min-width: 169px;
 }
 
 .order-button:hover {
@@ -236,6 +238,7 @@ h3 {
 
 .info-section-goals {
 	color: #2e2f42;
+	margin-bottom: 8px;
 }
 
 .info-section .info-text {
@@ -344,12 +347,12 @@ h2 {
 
 .footer {
 	background-color: #2e2f42;
-	height: 100px 0;
+	padding: 100px 0;
 }
 
 .bottom-info {
 	margin: 0;
-	padding: 100px 156px;
+	padding: 0px 156px;
 }
 
 .footer .logo {
